--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,43 @@
+.linkBox {
+width: 152px;
+height: 50px;
+
+background: rgba(94, 204, 27, 0.4);
+border-radius: 11px;
+border: 3px solid green;
+line-height: 40px;
+text-align: center;
+text-decoration: none;
+}
+
+.outer {
+  border: 1px solid black;
+  width: 100%;
+}
+
+.inner {
+  margin: 10px;
+  height:300px;
+  width:45%;
+  border: 1px solid black;
+}
+
+.active > div{
+  box-sizing: border-box;
+
+  width: 152px;
+  height: 50px;
+  
+  background: #5ECC1B;
+  border: 1px solid #000000;
+  box-shadow: 5px 5px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 11px;
+}
+
+nav > ul > li > a{
+  text-decoration: none;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -11,7 +51,7 @@ body {
 }
 
 .nav {
-  background-color: orange;
+  background-color: rgb(75, 75, 75);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -23,4 +63,5 @@ body {
   display: flex;
   gap: 2rem;
   padding: 0 23px;
+  text-decoration: none;
 }
