--- a/src/style.css
+++ b/src/style.css
@@ -2,9 +2,8 @@
 width: 152px;
 height: 50px;
 
-background: rgba(94, 204, 27, 0.4);
+background: rgba(255, 200, 0, 0.4);
 border-radius: 11px;
-border: 3px solid green;
 line-height: 40px;
 text-align: center;
 text-decoration: none;
@@ -28,7 +27,7 @@ text-decoration: none;
   width: 152px;
   height: 50px;
   
-  background: #5ECC1B;
+  background: orange;
   border: 1px solid #000000;
   box-shadow: 5px 5px 4px rgba(0, 0, 0, 0.25);
   border-radius: 11px;
